--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CoffeeShop</title>
     <meta name="author" content="Ian Maxey-Bell" />
-    <! - - REMINDER - add keywords and description meta tags - ->
+    <meta name="description" content="TripleTen_se_project_coffeeShop" />
+    <meta name="keywords" content="html, css, CoffeeShop, TripleTen" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="favicon.ico" type="image/x-icon" />
@@ -24,9 +25,92 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/se_project_2_files/logo_coffeeshop_dark.svg"
+            alt="Triple Peaks Library Coffee Shop Logo"
+            class="nav__logo"
+          />
+          <ul class="nav__links">
+            <li>
+              <a calss="nav__link" href="">Recipes</a>
+            </li>
+            <li>
+              <a calss="nav__link" href="">Book a table</a>
+            </li>
+            <li>
+              <a calss="nav__link" href="">Menu</a>
+            </li>
+            <li>
+              <a calss="nav__link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <h1 class="header__title">
+          <span class="header__span-accent">Specialty coffe</span>in the Triple
+          Peaks Library
+        </h1>
+        <p class="header__description">
+          Welcome to our study zone! We've got the coffee to energize you and
+          the cozy vibes to help you get creative.
+        </p>
+        <img
+          src="./images/se_project_2_files/inside_coffee_shop.png"
+          alt="Graphic Illustration Triple Peaks Specialty Coffee Shop"
+          class="header__image"
+        />
+        <div class="header__footer">
+          <div>
+            <p class="header__paragraph">Hours:</p>
+            <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
+            <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
+          </div>
+          <p class="header__paragraph">
+            200 Success Avenue, The Town of Triple Peaks
+          </p>
+        </div>
+      </header>
       <main class="content">
-        <section class="recipes"></section>
+        <section class="recipes">
+          <h2 class="recipes__title">Recipes</h2>
+          <p class="recipes__subtitle">
+            Check out some recipes we've collected for your home-brewing
+            conveninence:
+          </p>
+          <ul class="recpies__videos">
+            <li>
+              <iframe
+                width="480"
+                height="237"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=oQjxESUJaDOKoxth"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <p class="recpies__video-caption">
+                <span>Aeropress recipe</span> <span>~5 min</span>
+              </p>
+            </li>
+            <li>
+              <iframe
+                width="480"
+                height="237"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=rUi71VBEb8v3ybM2"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <p class="recpies__video-caption">
+                <span>French press recipe</span> <span>~15 min</span>
+              </p>
+            </li>
+          </ul>
+        </section>
         <section class="reservation"></section>
         <section class="menu"></section>
         <section class="about"></section>
