--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
           />
           <ul class="nav__links">
             <li>
-              <a calss="nav__link" href="">Recipes</a>
+              <a class="nav__link" href="#">Recipes</a>
             </li>
             <li>
-              <a calss="nav__link" href="">Book a table</a>
+              <a class="nav__link" href="#">Book a table</a>
             </li>
             <li>
-              <a calss="nav__link" href="">Menu</a>
+              <a class="nav__link" href="#">Menu</a>
             </li>
             <li>
-              <a calss="nav__link" href="">Contacts</a>
+              <a class="nav__link" href="#">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -78,34 +78,34 @@
             Check out some recipes we've collected for your home-brewing
             conveninence:
           </p>
-          <ul class="recpies__videos">
+          <ul class="recipes__videos">
             <li>
               <iframe
+                class="recipes__iframe"
                 width="480"
                 height="237"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=oQjxESUJaDOKoxth"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
               ></iframe>
-              <p class="recpies__video-caption">
+              <p class="recipes__video-caption">
                 <span>Aeropress recipe</span> <span>~5 min</span>
               </p>
             </li>
             <li>
               <iframe
+                class="recipes__iframe"
                 width="480"
                 height="237"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=rUi71VBEb8v3ybM2"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
               ></iframe>
-              <p class="recpies__video-caption">
+              <p class="recipes__video-caption">
                 <span>French press recipe</span> <span>~15 min</span>
               </p>
             </li>
