--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form form">
             <fieldset class="form__fieldset">
-              <lable for="name-input" class="form__lable">
+              <lable for="name-input" class="form__label">
                 Name *
                 <input
                   id="name-input"
@@ -125,7 +125,7 @@
                   required
                 />
               </lable>
-              <lable for="number-input" class="form__lable">
+              <lable for="number-input" class="form__label">
                 Number of guests *
                 <input
                   id="number-input"
@@ -137,7 +137,7 @@
                   required
                 />
               </lable>
-              <lable for="date & time-input" class="form__lable">
+              <lable for="date & time-input" class="form__label">
                 Date & time *
                 <input
                   id="date & time-input"
@@ -146,7 +146,7 @@
                   required
                 />
               </lable>
-              <lable for="email-input" class="form__lable">
+              <lable for="email-input" class="form__label">
                 Your email *
                 <input
                   id="email-input"
@@ -160,7 +160,7 @@
             <button class="form__button">Book a table</button>
             <lable
               for="ToS-checkbox-input"
-              class="form__lable form__lable_type_checkbox"
+              class="form__label form__label_type_checkbox"
             >
               <input
                 id="ToS-checkbox-input"
