--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="TripleTen_se_project_coffeeShop" />
     <meta name="keywords" content="html, css, CoffeeShop, TripleTen" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
+
     <link rel="stylesheet" href="favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -37,7 +37,7 @@
               <a class="nav__link" href="#Recipes1">Recipes</a>
             </li>
             <li>
-              <a class="nav__link" href="#reservation1">Book a table</a>
+              <a class="nav__link" href="#Reservation1">Book a table</a>
             </li>
             <li>
               <a class="nav__link" href="#Menu1">Menu</a>
@@ -111,11 +111,11 @@
             </li>
           </ul>
         </section>
-        <section class="reservation">
+        <section id="Reservation1" class="reservation">
           <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form form">
             <fieldset class="form__fieldset">
-              <lable for="name-input" class="form__label">
+              <label for="name-input" class="form__label">
                 Name *
                 <input
                   id="name-input"
@@ -124,8 +124,8 @@
                   placeholder="Name Surname"
                   required
                 />
-              </lable>
-              <lable for="number-input" class="form__label">
+              </label>
+              <label for="number-input" class="form__label">
                 Number of guests *
                 <input
                   id="number-input"
@@ -136,17 +136,17 @@
                   placeholder="1-8"
                   required
                 />
-              </lable>
-              <lable for="date & time-input" class="form__label">
+              </label>
+              <label for="date&time-input" class="form__label">
                 Date & time *
                 <input
-                  id="date & time-input"
+                  id="date&time-input"
                   type="datetime-local"
                   class="form__input"
                   required
                 />
-              </lable>
-              <lable for="email-input" class="form__label">
+              </label>
+              <label for="email-input" class="form__label">
                 Your email *
                 <input
                   id="email-input"
@@ -155,10 +155,10 @@
                   placeholder="email@email.com"
                   required
                 />
-              </lable>
+              </label>
             </fieldset>
             <button class="form__button">Book a table</button>
-            <lable
+            <label
               for="ToS-checkbox-input"
               class="form__label form__label_type_checkbox"
             >
@@ -168,13 +168,133 @@
                 class="form__checkbox"
               />
               I agree with the terms of use
-            </lable>
+            </label>
           </form>
         </section>
         <section id="Menu1" class="menu"></section>
-        <section id="About1" class="about"></section>
+        <h2 class="menu__title">Menu</h2>
+        <p class="menu__subtitle">
+          We brew coffe from locally roasted, Fairtrade ceritfied beans and use
+          biodegradable cups. All teas from our collection are $2/cup.
+        </p>
+        <ul class="menu_cards">
+          <li class="card">
+            <h3 class="card__title">Filter</h3>
+            <ul class="card__list">
+              <li class="card__list-item">
+                Regular (12 oz) <span class="card__list-divider"></span>$1
+              </li>
+              <li class="card__list-item">
+                Large (16 oz) <span class="card__list-divider"></span>$1.25
+              </li>
+              <li class="card__list-item">
+                XL (20 oz) <span class="card__list-divider"></span>$1.5
+              </li>
+              <li class="card__list-item">
+                Party-size (24 oz, decaf) (12 oz)
+                <span class="card__list-divider"></span>$1.75
+              </li>
+              <li class="card__list-item">
+                Iced Coffee (16 oz)
+                <span class="card__list-divider"></span>$1.25
+              </li>
+            </ul>
+          </li>
+          <li class="card">
+            <h3 class="card__title">Espresso</h3>
+            <ul class="card__list">
+              <li class="card__list-item">
+                Macchiato <span class="card__list-divider"></span>$1.25
+              </li>
+              <li class="card__list-item">
+                Cortado <span class="card__list-divider"></span>$1.5
+              </li>
+              <li class="card__list-item">
+                Mocha <span class="card__list-divider"></span>$3
+              </li>
+              <li class="card__list-item">
+                Sunrise in the Bay Area (decaf)
+                <span class="card__list-divider"></span>$10
+              </li>
+            </ul>
+          </li>
+          <li class="card">
+            <h3 class="card__title">Baked Goods</h3>
+            <ul class="card__list">
+              <li class="card__list-item">
+                Almond Croissant <span class="card__list-divider"></span>$2
+              </li>
+              <li class="card__list-item">
+                Banana Bread <span class="card__list-divider"></span>$1.75
+              </li>
+              <li class="card__list-item">
+                Key Lime Pie <span class="card__list-divider"></span>$3
+              </li>
+              <li class="card__list-item">
+                Blue Velvet Cake <span class="card__list-divider"></span>$3.75
+              </li>
+              <li class="card__list-item">
+                Web Cookie <span class="card__list-divider"></span>$2
+              </li>
+              <li class="card__list-item">
+                Fresh Bug'uette <span class="card__list-divider"></span>$0.25
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <section id="About1" class="about">
+          <h2 class="about__title">About the coffee shop</h2>
+          <div class="about__content">
+            <p class="about__pharagraph">
+              Our coffee shop is located in the Triple Peaks Library. It
+              features 6 tables and free WiFi.
+            </p>
+            <p class="about__pharagraph">
+              Our main mission is keeping guests cozy and energized.
+            </p>
+            <p class="about__pharagraph">
+              Besides that, we try to reduce our environmental impact — so we
+              don't sell single-use cups. But you can buy one of our reusable
+              cups!
+            </p>
+          </div>
+          <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
+        </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__content">
+          <img
+            src="./images/se_project_2_files/logo_coffeeshop_light.svg"
+            alt="TripleEspressoLogo"
+            class="footer__logo"
+          />
+          <div class="footer__colmn">
+            <h3 class="footer__columb-heading">social media</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a href="#" class="footer__social-link"
+                  ><img
+                    src="./images/se_project_2_files/facebook_white.svg"
+                    alt="Facebook icon"
+                    class="footer__social-icon"
+                  />Facebook</a
+                >
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__social-link"
+                  ><img
+                    src="./images/se_project_2_files/instagram_white.svg"
+                    alt="Instagram icon"
+                    class="footer__social-icon"
+                  />Instagram</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+      <p class="footer__copyright">&copy; 2025 Ian Maxey-Bell</p>
     </div>
   </body>
 </html>
